--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,6 +7,7 @@ option(PTP_STUFF "Include extra functions for debugging/testing" ON)
 option(PTP_DEFAULT_LOGGING "Include default log/panic/error implementation" ON)
 option(PTP_INCLUDE_CLI "Include CLI program" OFF)
 option(PTP_USE_LIBUSB "Use LibUSB backend on UNIX platforms" ON)
+option(PTP_INCLUDE_DEPS "Find and compile libusb or libwpd" ON)
 option(PTP_INCLUDE_EXAMPLES "Include examples" OFF)
 option(PTP_INCLUDE_VCAM_TEST "Include vcam test" OFF)
 option(PTP_INCLUDE_LIBUSB_LIBS "make libusb libraries PUBLIC" OFF)
@@ -46,41 +47,57 @@ endif()
 if(PTP_DEFAULT_LOGGING)
     list(APPEND PICT_CORE src/log.c)
 endif()
-
-if(UNIX AND PTP_USE_LIBUSB AND NOT PTP_NO_USB)
-    find_package(PkgConfig REQUIRED)
-    pkg_check_modules(LIBUSB REQUIRED libusb-1.0)
-    set(PLATFORM_LIB_FILES src/libusb.c)
-    set(PLATFORM_LIBS ${LIBUSB_LIBRARIES})
-    set(PLATFORM_DIRS ${LIBUSB_INCLUDE_DIRS})
-elseif(WIN32 AND NOT PTP_NO_USB)
-    set(PLATFORM_LIB_FILES src/libwpd.c)
-    set(PLATFORM_LIBS wpd_static)
-endif()
-
 if(PTP_NO_USB)
     set(PLATFORM_LIB_FILES src/no_usb.c)
 endif()
 
+if(UNIX AND PTP_USE_LIBUSB AND NOT PTP_NO_USB)
+    if(PTP_INCLUDE_DEPS)
+        find_package(PkgConfig REQUIRED)
+        pkg_check_modules(LIBUSB IMPORTED_TARGET GLOBAL libusb-1.0)
+        if(LIBUSB_FOUND)
+            list(APPEND PICT_LIBS PkgConfig::LIBUSB)
+        else()
+            option(LIBUSB_BUILD_SHARED_LIBS "" OFF)
+            option(LIBUSB_INSTALL_TARGETS "" OFF)
+            include(FetchContent)
+            FetchContent_Declare(libusb GIT_REPOSITORY https://github.com/libusb/libusb-cmake.git GIT_TAG v1.0.28-0 GIT_SHALLOW 1)
+            FetchContent_MakeAvailable(libusb)
+            list(APPEND PICT_LIBS usb-1.0)
+        endif()
+    endif()
+    list(APPEND PICT_CORE src/libusb.c)
+elseif(WIN32 AND NOT PTP_NO_USB)
+    list(APPEND PICT_CORE src/libwpd.c)
+    if(PTP_INCLUDE_DEPS)
+        if(EXISTS "${CMAKE_SOURCE_DIR}/../libwpd")
+            add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/../libwpd/ ${CMAKE_CURRENT_BINARY_DIR}/libwpd)
+        else()
+            include(FetchContent)
+            FetchContent_Declare(libwpd GIT_REPOSITORY https://github.com/petabyt/libwpd.git GIT_TAG master GIT_SHALLOW 1)
+            FetchContent_MakeAvailable(libwpd)
+        endif()
+        set(PICT_LIBS wpd_static)
+    endif()
+endif()
+
 add_library(libpict STATIC ${PICT_CORE} ${PLATFORM_LIB_FILES})
 target_compile_options(libpict
-    PRIVATE -Wall -Wshadow -Wcast-qual -Wpedantic -Werror=incompatible-pointer-types -Werror=deprecated-declarations -Wstrict-aliasing=3 -D VERBOSE
+    PRIVATE -Wall -Wshadow -Wcast-qual -Wpedantic -Werror=incompatible-pointer-types -Werror=deprecated-declarations -Wstrict-aliasing=3 -DVERBOSE
 )
-target_include_directories(libpict PUBLIC ${PROJECT_SOURCE_DIR}/src ${PLATFORM_DIRS})
-target_link_libraries(libpict PRIVATE ${PLATFORM_LIBS}) # Specify our libraries so flags/include dirs will be added
+target_include_directories(libpict PUBLIC ${PROJECT_SOURCE_DIR}/src)
+target_link_libraries(libpict PUBLIC ${PICT_LIBS})
 set_target_properties(libpict PROPERTIES OUTPUT_NAME pict) # libpict.a
 
 if(PTP_INCLUDE_CLI)
     find_package(PkgConfig REQUIRED)
-    pkg_check_modules(LIBPCAP REQUIRED libpcap)
-
+    pkg_check_modules(LIBPCAP REQUIRED IMPORTED_TARGET GLOBAL libpcap)
     add_executable(ptp
         src/cli.c
         src/dec.c
     )
-    target_include_directories(ptp PUBLIC ${PROJECT_SOURCE_DIR}/src ${LIBPCAP_INCLUDE_DIRS})
-    target_link_libraries(ptp libpict ${LIBUSB_LIBRARIES} ${LIBPCAP_LIBRARIES})
-
+    target_include_directories(ptp PUBLIC ${PROJECT_SOURCE_DIR}/src)
+    target_link_libraries(ptp libpict PkgConfig::LIBPCAP)
     install(
         TARGETS ptp
     )
@@ -89,7 +106,7 @@ endif()
 macro(add_example exe_name source)
     add_executable(${exe_name} ${source})
     target_include_directories(${exe_name} PUBLIC ${PROJECT_SOURCE_DIR}/src)
-    target_link_libraries(${exe_name} libpict ${LIBUSB_LIBRARIES})
+    target_link_libraries(${exe_name} libpict)
 endmacro()
 
 if(PTP_INCLUDE_EXAMPLES)
@@ -107,29 +124,19 @@ if(PTP_INCLUDE_EXAMPLES)
 endif()
 
 if(WIN32 AND PTP_INCLUDE_WINDOWS_TEST)
-    option(PTP_LIBWPD_FROM_GIT "Use git repo for libwpd" ON)
-    if(PTP_LIBWPD_FROM_GIT)
-        include(FetchContent)
-        FetchContent_Declare(libwpd GIT_REPOSITORY https://github.com/petabyt/libwpd GIT_TAG master GIT_SHALLOW 1)
-        FetchContent_MakeAvailable(libwpd)
-    else()
-        add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/../libwpd ${CMAKE_CURRENT_BINARY_DIR}/libwpd)
-    endif()
     add_executable(wintest examples/wintest.c)
-    target_link_libraries(wintest wpd_static libpict -lpthread -lurlmon -luuid -lws2_32)
+    target_link_libraries(wintest libpict -lpthread -lurlmon -luuid -lws2_32)
 endif()
 
 if(PTP_INCLUDE_VCAM_TEST)
-    option(PTP_VCAM_FROM_GIT "Use git repo for vcam" ON)
-    if(PTP_VCAM_FROM_GIT)
+    if(EXISTS "${CMAKE_SOURCE_DIR}/../vcam")
+        add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/../vcam ${CMAKE_CURRENT_BINARY_DIR}/vcam)
+    else()
         include(FetchContent)
         FetchContent_Declare(vcam GIT_REPOSITORY https://github.com/petabyt/vcam GIT_TAG master GIT_SHALLOW 1)
         FetchContent_MakeAvailable(vcam)
-    else()
-        add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/../vcam ${CMAKE_CURRENT_BINARY_DIR}/vcam)
     endif()
 
     add_executable(test test/test.c test/data.c)
     target_link_libraries(test libpict usb-vcam)
-    #add_subdirectory(/home/daniel/Pulled/hello_imgui/ ${CMAKE_CURRENT_BINARY_DIR}/hello_imgui)
 endif()
