Accept both wpd camera and generic types since fuji devices in raw conv mode are detected as generic, add ptp_comm_deinit for libwpd and libusb, call in ptp_close

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -70,9 +70,7 @@ if(UNIX AND PTP_USE_LIBUSB AND NOT PTP_NO_USB)
 elseif(WIN32 AND NOT PTP_NO_USB)
     list(APPEND PICT_CORE src/libwpd.c)
     if(PTP_INCLUDE_DEPS)
-        if(EXISTS "${CMAKE_SOURCE_DIR}/../libwpd")
-            add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/../libwpd/ ${CMAKE_CURRENT_BINARY_DIR}/libwpd)
-        else()
+        if(NOT TARGET wpd_static)
             include(FetchContent)
             FetchContent_Declare(libwpd GIT_REPOSITORY https://github.com/petabyt/libwpd.git GIT_TAG master GIT_SHALLOW 1)
             FetchContent_MakeAvailable(libwpd)
