Add in improved PTP/IP backend Made from the past year of hacking with fudge

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,7 +7,6 @@ option(PTP_STUFF "Include extra functions for debugging/testing" ON)
 option(PTP_DEFAULT_LOGGING "Include default log/panic/error implementation" ON)
 option(PTP_INCLUDE_CLI "Include CLI program" OFF)
 option(PTP_USE_LIBUSB "Use LibUSB backend on UNIX platforms" ON)
-option(PTP_INCLUDE_DEPS "Find and compile libusb or libwpd" ON)
 option(PTP_INCLUDE_EXAMPLES "Include examples" OFF)
 option(PTP_INCLUDE_VCAM_TEST "Include vcam test" OFF)
 option(PTP_INCLUDE_LIBUSB_LIBS "make libusb libraries PUBLIC" OFF)
@@ -31,7 +30,7 @@ set(PICT_CORE
     src/transport.c
 )
 if(NOT PTP_NO_TCP)
-    list(APPEND PICT_CORE src/ip.c)
+    list(APPEND PICT_CORE src/ip2.c)
 else()
     list(APPEND PICT_CORE src/no_ip.c)
 endif()
@@ -52,36 +51,32 @@ if(PTP_NO_USB)
 endif()
 
 if(UNIX AND PTP_USE_LIBUSB AND NOT PTP_NO_USB)
-    if(PTP_INCLUDE_DEPS)
-        find_package(PkgConfig REQUIRED)
-        pkg_check_modules(LIBUSB IMPORTED_TARGET GLOBAL libusb-1.0)
-        if(LIBUSB_FOUND)
-            list(APPEND PICT_LIBS PkgConfig::LIBUSB)
-        else()
-            option(LIBUSB_BUILD_SHARED_LIBS "" OFF)
-            option(LIBUSB_INSTALL_TARGETS "" OFF)
-            include(FetchContent)
-            FetchContent_Declare(libusb GIT_REPOSITORY https://github.com/libusb/libusb-cmake.git GIT_TAG v1.0.28-0 GIT_SHALLOW 1)
-            FetchContent_MakeAvailable(libusb)
-            list(APPEND PICT_LIBS usb-1.0)
-        endif()
+    find_package(PkgConfig REQUIRED)
+    pkg_check_modules(LIBUSB IMPORTED_TARGET GLOBAL libusb-1.0)
+    if(LIBUSB_FOUND)
+        list(APPEND PICT_LIBS PkgConfig::LIBUSB)
+    else()
+        option(LIBUSB_BUILD_SHARED_LIBS "" OFF)
+        option(LIBUSB_INSTALL_TARGETS "" OFF)
+        include(FetchContent)
+        FetchContent_Declare(libusb GIT_REPOSITORY https://github.com/libusb/libusb-cmake.git GIT_TAG v1.0.28-0 GIT_SHALLOW 1)
+        FetchContent_MakeAvailable(libusb)
+        list(APPEND PICT_LIBS usb-1.0)
     endif()
     list(APPEND PICT_CORE src/libusb.c)
 elseif(WIN32 AND NOT PTP_NO_USB)
     list(APPEND PICT_CORE src/libwpd.c)
-    if(PTP_INCLUDE_DEPS)
-        if(NOT TARGET wpd_static)
-            include(FetchContent)
-            FetchContent_Declare(libwpd GIT_REPOSITORY https://github.com/petabyt/libwpd.git GIT_TAG master GIT_SHALLOW 1)
-            FetchContent_MakeAvailable(libwpd)
-        endif()
-        set(PICT_LIBS wpd_static)
+    if(NOT TARGET wpd_static)
+        include(FetchContent)
+        FetchContent_Declare(libwpd GIT_REPOSITORY https://github.com/petabyt/libwpd.git GIT_TAG master GIT_SHALLOW 1)
+        FetchContent_MakeAvailable(libwpd)
     endif()
+    set(PICT_LIBS wpd_static)
 endif()
 
 add_library(libpict STATIC ${PICT_CORE} ${PLATFORM_LIB_FILES})
 target_compile_options(libpict
-    PRIVATE -Wall -Wshadow -Wcast-qual -Wpedantic -Werror=incompatible-pointer-types -Werror=deprecated-declarations -Wstrict-aliasing=3 -DVERBOSE
+    PRIVATE -Wall -Wshadow -Wcast-qual -Wpedantic -Werror=incompatible-pointer-types -Werror=deprecated-declarations -Wstrict-aliasing=3 -Wno-narrowing -DVERBOSE
 )
 target_include_directories(libpict PUBLIC ${PROJECT_SOURCE_DIR}/src)
 target_link_libraries(libpict PUBLIC ${PICT_LIBS})
