--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -51,10 +51,14 @@ if(PTP_NO_USB)
 endif()
 
 if(UNIX AND PTP_USE_LIBUSB AND NOT PTP_NO_USB)
-    find_package(PkgConfig REQUIRED)
-    pkg_check_modules(LIBUSB IMPORTED_TARGET GLOBAL libusb-1.0)
-    if(LIBUSB_FOUND)
-        list(APPEND PICT_LIBS PkgConfig::LIBUSB)
+    find_package(PkgConfig)
+    if(PKG_CONFIG_FOUND)
+        pkg_check_modules(LIBUSB IMPORTED_TARGET GLOBAL libusb-1.0)
+        if(LIBUSB_FOUND)
+            list(APPEND PICT_LIBS PkgConfig::LIBUSB)
+        else()
+            message(FATAL_ERROR "install libusb")
+        endif()
     else()
         option(LIBUSB_BUILD_SHARED_LIBS "" OFF)
         option(LIBUSB_INSTALL_TARGETS "" OFF)
