--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,10 +6,8 @@ option(PTP_CANON_ADV "Include implementation for advanced Canon features" ON)
 option(PTP_STUFF "Include extra functions for debugging/testing" ON)
 option(PTP_DEFAULT_LOGGING "Include default log/panic/error implementation" ON)
 option(PTP_INCLUDE_CLI "Include CLI program" OFF)
-option(PTP_USE_LIBUSB "Use LibUSB backend on UNIX platforms" ON)
 option(PTP_INCLUDE_EXAMPLES "Include examples" OFF)
 option(PTP_INCLUDE_VCAM_TEST "Include vcam test" OFF)
-option(PTP_INCLUDE_LIBUSB_LIBS "make libusb libraries PUBLIC" OFF)
 option(PTP_INCLUDE_BIND "Include optional bind.c" ON)
 option(PTP_NO_USB "Compile src/no_usb.c in place of libusb/libwpd" OFF)
 option(PTP_NO_TCP "Compile no_ip.c in place of TCP code" OFF)
@@ -50,22 +48,26 @@ if(PTP_NO_USB)
     set(PLATFORM_LIB_FILES src/no_usb.c)
 endif()
 
-if(UNIX AND PTP_USE_LIBUSB AND NOT PTP_NO_USB)
-    find_package(PkgConfig)
-    if(PKG_CONFIG_FOUND)
-        pkg_check_modules(LIBUSB IMPORTED_TARGET GLOBAL libusb-1.0)
-        if(LIBUSB_FOUND)
-            list(APPEND PICT_LIBS PkgConfig::LIBUSB)
-        else()
-            message(FATAL_ERROR "install libusb")
-        endif()
-    else()
-        option(LIBUSB_BUILD_SHARED_LIBS "" OFF)
-        option(LIBUSB_INSTALL_TARGETS "" OFF)
-        include(FetchContent)
-        FetchContent_Declare(libusb GIT_REPOSITORY https://github.com/libusb/libusb-cmake.git GIT_TAG v1.0.28-0 GIT_SHALLOW 1)
-        FetchContent_MakeAvailable(libusb)
+if(UNIX AND NOT PTP_NO_USB)
+    if(TARGET usb-1.0)
         list(APPEND PICT_LIBS usb-1.0)
+    else()
+        find_package(PkgConfig)
+        if(PKG_CONFIG_FOUND)
+            pkg_check_modules(LIBUSB IMPORTED_TARGET GLOBAL libusb-1.0)
+            if(LIBUSB_FOUND)
+                list(APPEND PICT_LIBS PkgConfig::LIBUSB)
+            else()
+                message(FATAL_ERROR "install libusb")
+            endif()
+        else()
+            option(LIBUSB_BUILD_SHARED_LIBS "" OFF)
+            option(LIBUSB_INSTALL_TARGETS "" OFF)
+            include(FetchContent)
+            FetchContent_Declare(libusb GIT_REPOSITORY https://github.com/libusb/libusb-cmake.git GIT_TAG v1.0.28-0 GIT_SHALLOW 1)
+            FetchContent_MakeAvailable(libusb)
+            list(APPEND PICT_LIBS usb-1.0)
+        endif()
     endif()
     list(APPEND PICT_CORE src/libusb.c)
 elseif(WIN32 AND NOT PTP_NO_USB)
