--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,6 +7,7 @@ option(PTP_CANON_ADV "Include implementation for advanced Canon features" ON)
 option(PTP_STUFF "Include extra functions for debugging/testing" ON)
 option(PTP_DEFAULT_LOGGING "Include default log/panic/error implementation" ON)
 option(PTP_INCLUDE_CLI "Include CLI program" OFF)
+option(PTP_USE_LIBUSB "Use LibUSB backend on UNIX platforms" ON)
 option(PTP_INCLUDE_EXAMPLES "Include examples" OFF)
 option(PTP_INCLUDE_VCAM_TEST "Include vcam test" OFF)
 option(PTP_INCLUDE_BIND "Include optional bind.c" ON)
@@ -49,7 +50,7 @@ if(PTP_NO_USB)
     set(PLATFORM_LIB_FILES src/no_usb.c)
 endif()
 
-if(UNIX AND NOT PTP_NO_USB)
+if(UNIX AND PTP_USE_LIBUSB AND NOT PTP_NO_USB)
     if(TARGET usb-1.0)
         list(APPEND PICT_LIBS usb-1.0)
     else()
