More work on quickjs bindings

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -115,6 +115,11 @@ if(PTP_INCLUDE_CLI)
     find_package(PkgConfig REQUIRED)
     pkg_check_modules(LIBPCAP REQUIRED IMPORTED_TARGET GLOBAL libpcap)
     pkg_check_modules(LUA53 REQUIRED IMPORTED_TARGET GLOBAL lua5.3)
+    find_library(QUICKJS_LIB
+        NAMES quickjs
+        PATH_SUFFIXES quickjs
+        REQUIRED
+    )
     add_executable(ptp
         src/cli.c
         src/dec.c
@@ -122,9 +127,11 @@ if(PTP_INCLUDE_CLI)
         src/lua/lua.c
         src/lua/lua-cjson/lua_cjson.c
         src/lua/lua-cjson/strbuf.c
+
+        src/js/quickjs.c
     )
     target_include_directories(ptp PUBLIC ${PROJECT_SOURCE_DIR}/src ${PROJECT_SOURCE_DIR}/src/lua)
-    target_link_libraries(ptp libpict PkgConfig::LIBPCAP PkgConfig::LUA53 m)
+    target_link_libraries(ptp libpict PkgConfig::LIBPCAP PkgConfig::LUA53 ${QUICKJS_LIB} m)
     install(
         TARGETS ptp
     )
